# portfolio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  env.txt  pylintrc  pyproject.toml  virtualenv.txt
allocation/: __init__.py  allocation.py  selector.py
data/: CDIRetriever.py  DataRetriever.py  DebenturesRetriever.py  DirectTreasureRetriever.py  StocksRetriever.py  test_DataRetriever.py
data/data_cdi/: download_cdi_files.sh
data/data_debentures/: download_debentures_files.sh
data/data_dt/: download_dt_files.sh
data/data_stocks/: download_stocks_files.sh
model/: __init__.py  category.py  curves.py  fixedincome.py  portfolio.py  rate.py  security.py  strategy.py
retriever/: __init__.py  bcb.py  bovespa.py  cdi.py  curves.py  debentures.py  directtreasure.py  dt.py  fund.py  index.py  ipca.py  retriever.py  stocks.py
retriever/data_anbima/: download_anbima_files.sh
retriever/data_bcb/: bcb_retriever.py  download_bcb_files.sh
retriever/data_bovespa/: .gitignore  download_bovespa_files.sh
retriever/data_cdi/: download_cdi_files.sh
retriever/data_curves/: .Rprofile  .gitignore  data_curves.Rproj  download_curves.R  download_curves.py  download_curves_files.sh
retriever/data_debentures/: .gitignore  download_debentures_files.sh
retriever/data_directtreasure/: .gitignore  URLs.txt  codes.txt  download_directtreasure_files.sh
retriever/data_dt/: download_dt_files.sh
retriever/data_fund/: .gitignore  cvm_retriever.py  download_fund_files.sh
retriever/data_idex/: download_idex_files.sh
retriever/data_ipca/: .gitignore  download_ipca_files.sh  ipca_retriever.py
retriever/data_stocks/: .gitignore  download_stocks_files.sh
scripts/: .gitignore  holidays.py
test/: test_DataRetriever.py
utils/: approx_equal.py
