[project]
name = "portfolio"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bizdays>=1.0.16",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "pyarrow>=20.0.0",
    "python-bcb>=0.3.3",
    "quantlib>=1.38",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pandas-stubs>=2.2.3.250308",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
