[project]
name = "portfolio"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bizdays>=1.0.19",
    "ordered-enum>=0.0.10",
    "pandas>=2.3.3",
    "playwright>=1.60.0",
    "pyarrow>=24.0.0",
    "pyettj>=0.4.1",
    "python-bcb>=0.4.0",
    "quantlib>=1.42.1",
    "sh>=2.3.0",
    "xlrd>=2.0.2",
    "xlwt>=1.3.0",
]

[dependency-groups]
dev = [
    "ipython>=9.15.0",
    "pandas-stubs>=3.0.3.260530",
]

[tool.bandit]
skips = [
  "B101",  # assert_used
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.isort]
profile = "black"
